CSS spacing solved

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -4,7 +4,8 @@
   width: 100%;
   border: 1px solid #DDDDDD;
   border-radius: 4px;
-  position: relative;
+  display: flex;
+  justify-content: end;
 }
 
 
