--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -5,9 +5,8 @@
   border: 1px solid #DDDDDD;
   border-radius: 4px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: end;
 }
 
 
@@ -50,6 +49,7 @@
   height: 100%;
   width: 25%;
   margin-left: 50px;
+  margin-right: auto;
 }
 .filters div.amenities h3{
   font-weight: 600;
